--- a/templates/contactuspage.html
+++ b/templates/contactuspage.html
@@ -65,14 +65,14 @@ window.onclick = function(event) {
     <p>Customer support call: 0234234234 </p>
 
        <footer class="site-footer">
-        <div class="footer-links">
-            <a href="{{ url_for('returns')}}">Return Policies</a>
-            <a href="#">About Us</a>
-            <a href="#">Store Locations</a>
-            <a href="#">Help & Support</a>
-            <a href="{{ url_for('contactus')}}">Contact Us</a>
-            <a href="{{ url_for('adminlogin')}}">Admin Login</a>
-        </div>
+    <nav class="category-nav">
+        <a href="{{ url_for('categorypage', category_name='Incontinence')}}">Incontinence</a>
+        <a href="{{ url_for('categorypage', category_name='Baby Products')}}">Baby Care</a>
+        <a href="{{ url_for('categorypage', category_name='Beauty')}}">Beauty</a>
+        <a href="{{ url_for('categorypage', category_name='Medicine')}}">Medicine</a>
+        <a href="{{ url_for('categorypage', category_name='Supplements')}}">Supplements</a>
+        <a href="{{ url_for('categorypage', category_name='Skincare')}}">Skincare</a>
+    </nav>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
     </footer>
 </body>
