--- a/templates/productpage.html
+++ b/templates/productpage.html
@@ -36,13 +36,12 @@
     </header>
 
     <nav class="category-nav">
-        <a href="#">Incontinence</a>
+        <a href="{{ url_for('categorypage', category_name='Incontinence')}}">Incontinence</a>
         <a href="{{ url_for('categorypage', category_name='Baby Products')}}">Baby Care</a>
-        <a href="#">Beauty</a>
-        <a href="#">Medicine</a>
-        <a href="#">Supplements</a>
-        <a href="#">Skincare</a>
-        <a href="#">Our services</a>
+        <a href="{{ url_for('categorypage', category_name='Beauty')}}">Beauty</a>
+        <a href="{{ url_for('categorypage', category_name='Medicine')}}">Medicine</a>
+        <a href="{{ url_for('categorypage', category_name='Supplements')}}">Supplements</a>
+        <a href="{{ url_for('categorypage', category_name='Skincare')}}">Skincare</a>
     </nav>
 
 <!-- add product display. add availability. add reviews. -->
