--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -46,7 +46,7 @@
 
     <div class="carousel">
         <img src="https://cdn.printnetwork.com/production/assets/5966561450122033bd4456f8/imageLocker/blog-description/blog/sales_banners.jpg" alt="img" class="active">
-        <img src="https://www.ozihub.com/pub/media/catalog/product/cache/e4d64343b1bc593f1c5348fe05efa4a6/9/1/9188--x700120.png" alt="img">
+        <img src="https://t3.ftcdn.net/jpg/04/65/46/52/360_F_465465254_1pN9MGrA831idD6zIBL7q8rnZZpUCQTy.jpg" alt="img">
         <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/3ce709113389695.60269c221352f.jpg" alt="img">
     </div>
 
