--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -111,7 +111,7 @@ document.addEventListener('DOMContentLoaded', function () {
     searchForm.addEventListener('submit', function (e) {
         const input = searchForm.querySelector('input[name="query"]');
         if (!input.value.trim()) {
-            e.preventDefault();  // Prevent form submission
+            e.preventDefault(); 
         }
     });
 });
@@ -119,9 +119,9 @@ document.addEventListener('DOMContentLoaded', function () {
     <footer class="site-footer">
         <div class="footer-links">
             <a href="{{ url_for('returns')}}">Return Policies</a>
-            <a href="#">About Us</a>
-            <a href="#">Store Locations</a>
-            <a href="#">Help & Support</a>
+            <a href="{{ url_for('aboutus')}}">About Us</a>
+            <a href="{{ url_for('locations')}}">Store Locations</a>
+            <a href="{{ url_for('helpsupport')}}">Help & Support</a>
             <a href="{{ url_for('contactus')}}">Contact Us</a>
             <a href="{{ url_for('adminlogin')}}">Admin Login</a>
         </div>
