--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -44,7 +44,7 @@
         <a href="{{ url_for('categorypage', category_name='Skincare')}}">Skincare</a>
     </nav>
 
-<script>
+    <script>
     function toggleDropdown() {
   var menu = document.getElementById("dropdownMenu");
   menu.style.display = (menu.style.display === "block") ? "none" : "block";
@@ -61,28 +61,10 @@ window.onclick = function(event) {
 </script>
 
 
-    <div class="container">
-        <h1>Search Results for "{{ query }}"</h1>
-
-        {% if results %}
-            <div class="product-grid">
-                {% for product in results %}
-                <div class="product-card">
-                    <a href="{{ url_for('product_detail', product_id=product['id']) }}">
-                        <img src="{{ url_for('static', filename='images/product_images/' ~ product['image']) }}" alt="{{ product['product_name'] }}">
-                        <div class="product-name">{{ product['Product'] }}</div>
-                        <div class="product-price">${{ product['price'] }}</div>
-                    </a>
-                </div>
-                {% endfor %}
-            </div>
-        {% else %}
-            <p>No products found matching your search.</p>
-        {% endif %}
-    </div>
-
-    <footer class="site-footer">
-        <div class="footer-links">
+    <h1>About Us</h1>
+    <p><i>Insert company information here</i></p>
+       <footer class="site-footer">
+                <div class="footer-links">
             <a href="{{ url_for('returns')}}">Return Policies</a>
             <a href="{{ url_for('aboutus')}}">About Us</a>
             <a href="{{ url_for('locations')}}">Store Locations</a>
@@ -92,6 +74,5 @@ window.onclick = function(event) {
         </div>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
     </footer>
-    
 </body>
 </html>
