--- a/templates/cartpage.html
+++ b/templates/cartpage.html
@@ -147,10 +147,10 @@ document.getElementById('checkout-form').addEventListener('submit', async functi
     <footer class="site-footer">
         <div class="footer-links">
             <a href="{{ url_for('returns')}}">Return Policies</a>
-            <a href="#">About Us</a>
-            <a href="#">Store Locations</a>
-            <a href="#">Help & Support</a>
-            <a href="#">Contact Us</a>
+            <a href="{{ url_for('aboutus')}}">About Us</a>
+            <a href="{{ url_for('locations')}}">Store Locations</a>
+            <a href="{{ url_for('helpsupport')}}">Help & Support</a>
+            <a href="{{ url_for('contactus')}}">Contact Us</a>
             <a href="{{ url_for('adminlogin')}}">Admin Login</a>
         </div>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
