--- a/templates/profilepage.html
+++ b/templates/profilepage.html
@@ -87,12 +87,12 @@ window.onclick = function(event) {
     </div>
 
             <footer class="site-footer">
-        <div class="footer-links">
-            <a href="#">Return Policies</a>
-            <a href="#">About Us</a>
-            <a href="#">Store Locations</a>
-            <a href="#">Help & Support</a>
-            <a href="#">Contact Us</a>
+            <div class="footer-links">
+            <a href="{{ url_for('returns')}}">Return Policies</a>
+            <a href="{{ url_for('aboutus')}}">About Us</a>
+            <a href="{{ url_for('locations')}}">Store Locations</a>
+            <a href="{{ url_for('helpsupport')}}">Help & Support</a>
+            <a href="{{ url_for('contactus')}}">Contact Us</a>
             <a href="{{ url_for('adminlogin')}}">Admin Login</a>
         </div>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
