--- a/templates/admindashboard.html
+++ b/templates/admindashboard.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Admin {{ username }}</h1>
     <div class="topbar">
-        <div class="title">Master Admin</div>
+        <div class="title">Chemist Connect Admin - Dashboard</div>
     </div>
     
     <div class="sidebar">
